djvusmooth (0.2.15) UNRELEASED; urgency=low

  * Improve the setup script:
    + Run msgfmt with the --verbose option.
  * Improve error handling.
  * Use HTTPS URLs when they are available, in documentation and code.
  * Document that is possible to edit hyperlinks.
    Thanks to Janusz S. Bień for the bug report.
    https://bitbucket.org/jwilk/djvusmooth/issue/13

 -- Jakub Wilk <jwilk@jwilk.net>  Fri, 09 May 2014 23:08:43 +0200

djvusmooth (0.2.14) unstable; urgency=low

  [ Jakub Wilk ]
  * Add “Open recent” submenu.
    https://bitbucket.org/jwilk/djvusmooth/issue/7
  * Do not abort opening a new file if user chose to save the current one.
  * Check Python version at runtime.
  * Improve the manual page, as per man-pages(7) recommendations:
    + Remove the “AUTHOR” section.
    + Rename the “ENVIRONMENT VARIABLES” section as “ENVIRONMENT”.
    + Make “PORTABILITY” and “REPORTING BUGS” subsections of the “BUGS”
      section.
  * Improve the setup script:
    + Make “setup.py clean -a” remove compiled manual page (unless it was built
      by “setup.py sdist”).
    + Fix compatibility with Python 2.5 and 2.6 (broken in 0.2.12).
  * Improve error handling.

  [ C. Daniel Sanchez R. ]
  * Update the Spanish translation.

  [ Kyrill Detinov ]
  * Update the Russian translation.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 21 Feb 2013 23:18:33 +0100

djvusmooth (0.2.13) unstable; urgency=low

  * Add keyboard shortcuts for “Zoom in” and “Zoom out”.
    https://bitbucket.org/jwilk/djvusmooth/issue/8
  * Fix editing text in external editor: when a zone broader than line without
    sub-zones existed, djvusmooth incorrectly skipped it when importing text.
    Thanks to Janusz S. Bień for the bug report.
  * Fix segmentation fault on shutdown.
    Thanks to Janusz S. Bień for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 02 Oct 2012 12:02:42 +0200

djvusmooth (0.2.12) unstable; urgency=low

  [ Jakub Wilk ]
  * Install desktop file.